1. EP#504 - Java Upgrade and Script Engine Migration, 2. ST#68 - Remove PLF Interface Project, 3. Islamic Code removal
git-svn-id: http://192.168.110.32/svn/pennapps/pff/root/branches/PLF-Release-6.0.0@147139 6963f9ea-81fa-44da-aa10-7ebde50aa541