@@ -57,7 +57,7 @@ public class ControlDump implements Tasklet {
 
 			DataEngineStatus status = ControlDumpExtract.EXTRACT_STATUS;
 			status.setStatus("I");
-			new Thread(new ControlDumpProcessThread(new Long(1000))).start();
+			new Thread(new ControlDumpProcessThread(Long.valueOf(1000))).start();
 			Thread.sleep(1000);
 			BatchUtil.setExecutionStatus(context, status);
 
