@@ -57,7 +57,7 @@ public class SAPGL implements Tasklet {
 
 			DataEngineStatus status = SAPGLExtract.SAP_GL_STATUS;
 			status.setStatus("I");
-			new Thread(new SAPGLProcessThread(new Long(1000))).start();
+			new Thread(new SAPGLProcessThread(Long.valueOf(1000))).start();
 			Thread.sleep(1000);
 			BatchUtil.setExecutionStatus(context, status);
 
@@ -94,7 +94,7 @@ public class SAPGL implements Tasklet {
 		public void run() {
 			try {
 				logger.debug("SAP-GL Process initiated...");
-				//new SAPGLExtract(dataSource, userId, valueDate, appDate).extractReport();
+				// new SAPGLExtract(dataSource, userId, valueDate, appDate).extractReport();
 				TimeUnit.SECONDS.sleep(1);
 			} catch (Exception e) {
 				logger.error(Literal.EXCEPTION, e);
