@@ -208,7 +208,7 @@ public class MandateProcessDAOImpl extends SequenceDao<Object> implements Mandat
 						mandateId = obj.toString();
 					}
 
-					logMandateHistory(new Long(mandateId), id);
+					logMandateHistory(Long.valueOf(mandateId), id);
 					return id;
 				}
 			});
