@@ -28,7 +28,7 @@ public class TestDataMart {
 	@Test(enabled = false)
 	public void process() {
 		try {
-			new DataMartExtarct(dataSource, new Long(1000), DateUtil.getSysDate(), DateUtil.getSysDate()).process();
+			new DataMartExtarct(dataSource, Long.valueOf(1000), DateUtil.getSysDate(), DateUtil.getSysDate()).process();
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
